Layout problem solved

--- a/css/header.css
+++ b/css/header.css
@@ -15,7 +15,8 @@ header {
 	justify-content: space-between;
 	height: 136px;
 	width: 100%;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2), 0 16px 30px 0 rgba(0, 0, 0, 0.19);
+
 }
 
 .desktopNav {
