--- a/css/hero.css
+++ b/css/hero.css
@@ -9,7 +9,7 @@ section {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
-	padding: 2rem;
+	padding: .3rem;
 }
 
 #hero div {
@@ -17,8 +17,32 @@ section {
 }
 
 img {
-	width: 350px;
-	height: 400px;
+	width: 200px;
+	height: 300px;
+	object-fit: cover;
+	border-radius: 7px 30px;
+	box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2), 0 16px 30px 0 rgba(0, 0, 0, 0.19);
+}
+
+/* Monile Screen */
+@media screen and (max-width: 768px) {
+	#hero {
+		flex-direction: column;
+		justify-content: center;
+	}
+
+	#hero div {
+		margin: auto;
+	}
+
+	img {
+		width: 300px;
+		height: 400px;
+	}
+
+	#hero h2 {
+		
+	}
 }
 
 /* Very Small Screen */
@@ -30,32 +54,9 @@ img {
 	}
 
 	img {
-		margin: auto;
-		width: 250px;
-		height: 250px;
-	}
-}
-
-/* Monile Screen */
-@media screen and (max-width: 768px) {
-	#hero {
-		/*display: flex;*/
-		flex-direction: column;
-		justify-content: center;
-	}
-
-	#hero div {
-		margin: auto;
-	}
-
-	img {
-		margin: auto;
-		width: 300px;
+		width: 200px;
 		height: 300px;
 	}
 
-	#hero h2 {
-		
-	}
 }
 
